footer spacing issue resolved mb

--- a/css/hhss.css
+++ b/css/hhss.css
@@ -490,6 +490,11 @@ img.hulalogo {
 /*======================================================================================
                                 MOBILE BOUTIQUE FROM 0PX
 ======================================================================================*/
+.mb {
+    height: 110vh;
+    width: auto;
+}
+
 .mbbox {
     height: auto;
     justify-self: center;
